--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -210,7 +210,7 @@
 }
 
 html, body, #root {
-  height: 100%;
+  min-height: 100%;
   width: 100%;
   overflow-x: hidden;
 }
